--- a/Pagina/your-stream/src/app/pages/favoritos/favoritos.component.html
+++ b/Pagina/your-stream/src/app/pages/favoritos/favoritos.component.html
@@ -1,30 +1,32 @@
+<div class="container">
+    <h2 class="text-center mt-3">Basados en tus preferencias...</h2>
 
-    <h2 class="text-center mt-3">Basados en tus preferencias, te traemos las siguientes recomendaciones</h2>
-    @for (row of [0,1,2,3,4]; track row) {
-    <div class="container p-3">
-        <div class="row">
-            @for (card of getRowCards(row); track card.id) {
-            <div class="col">
-                <div class="card" style="width: 18rem;" [class.fade-out]="card.isDeleting">
-                    <img [src]="card.image" [alt]="card.title" class="card-img-top">
-                    <div class="card-body">
-                        <h4>{{card.genres}}</h4>
-                        <p class="card-text">
-                            @if (card.showFullText) {
-                            {{card.fullDescription}}
-                            } @else {
-                            {{card.shortDescription}}
-                            }
-                        </p>
-                        <button class="btn btn-primary" (click)="toggleText(card)">
-                            {{card.showFullText ? 'Menos' : 'Más'}}
-                        </button>
-                        <button class="btn btn-danger" (click)="deleteCard(card.id)">Eliminar</button>
-                    </div>
-                </div>
-            </div>
-            }
+    @if (loading) {
+    <div class="text-center">
+        <div class="spinner-border" role="status">
+            <span class="visually-hidden">Loading...</span>
         </div>
     </div>
+    } @else {
+    <div class="row">
+        @for (card of favorites; track card.id) {
+        <div class="col-md-4 mb-4">
+            <div class="card" [class.fade-out]="card.isDeleting">
+                <img [src]="card.image" [alt]="card.title" class="card-img-top">
+                <div class="card-body">
+                    <h4>{{card.genres}}</h4>
+                    <p class="card-text">
+                        {{ card.showFullText ? card.fullDescription : card.shortDescription }}
+                    </p>
+                    <button class="btn btn-primary" (click)="card.showFullText = !card.showFullText">
+                        {{ card.showFullText ? 'Menos' : 'Más' }}
+                    </button>
+                    <button class="btn btn-danger" (click)="deleteCard(card.id)">Eliminar</button>
+                </div>
+            </div>
+        </div>
+        }
+    </div>
     }
+</div>
 
