Cambios en el resto de laa paginas para pasar los test y el añadido de services

--- a/Pagina/your-stream/src/app/core/footer/footer.component.html
+++ b/Pagina/your-stream/src/app/core/footer/footer.component.html
@@ -2,8 +2,11 @@
     <div class="container">
         <p class="mb-1">&copy; 2025 Stream Service. Todos los derechos reservados.</p>
         <p class="mb-0">
-            <a href="Trabajo en progreso" class="text-white">Términos y condiciones</a> |
-            <a href="Trabajo en progreso" class="text-white">Política de privacidad</a>
+            <ng-container *ngIf="footerLinks$ | async as links">
+                <ng-container *ngFor="let link of links; let last = last">
+                    <a [href]="link.url" class="text-white">{{ link.text }}</a><span *ngIf="!last"> | </span>
+                </ng-container>
+            </ng-container>
         </p>
     </div>
 </footer>
