--- a/Pagina/your-stream/src/app/pages/series/series.component.html
+++ b/Pagina/your-stream/src/app/pages/series/series.component.html
@@ -1,29 +1,27 @@
 <h1 class="text-center mt-3">Las mejores series</h1>
-
-@for (row of [0,1,2]; track row) {
-<div class="container p-3">
-    <div class="row">
-        @for (card of getRowCards(row); track card.id) {
-        <div class="col">
-            <div class="card" style="width: 18rem;" [class.fade-out]="card.isDeleting">
-                <img [src]="card.image" [alt]="card.title" class="card-img-top">
-                <div class="card-body">
-                    <h4>{{card.genres}}</h4>
-                    <p class="card-text">
-                        @if (card.showFullText) {
-                        {{card.fullDescription}}
-                        } @else {
-                        {{card.shortDescription}}
-                        }
-                    </p>
-                    <button class="btn btn-primary" (click)="toggleText(card)">
-                        {{card.showFullText ? 'Menos' : 'Más'}}
-                    </button>
-                    <button class="btn btn-danger" (click)="deleteCard(card.id)">Eliminar</button>
+<div *ngIf="rows$ | async as rows">
+    <ng-container *ngFor="let row of rows; let last = last">
+        <div class="container p-3">
+            <div class="row">
+                <div class="col" *ngFor="let card of row; trackBy: trackById">
+                    <div class="card" style="width: 18rem;" [class.fade-out]="card.isDeleting">
+                        <img [src]="card.image" [alt]="card.title" class="card-img-top">
+                        <div class="card-body">
+                            <h4>{{ card.genres }}</h4>
+                            <p class="card-text">
+                                {{ card.showFullText ? card.fullDescription : card.shortDescription }}
+                            </p>
+                            <button class="btn btn-primary" (click)="toggleText(card)">
+                                {{ card.showFullText ? 'Menos' : 'Más' }}
+                            </button>
+                            <button class="btn btn-danger" (click)="deleteCard(card)">
+                                Eliminar
+                            </button>
+                        </div>
+                    </div>
                 </div>
             </div>
         </div>
-        }
-    </div>
+        <hr *ngIf="!last">
+    </ng-container>
 </div>
-}
