--- a/Pagina/your-stream/src/app/pages/login/login.component.html
+++ b/Pagina/your-stream/src/app/pages/login/login.component.html
@@ -1,4 +1,3 @@
-
 <div class="text-center mt-3">
     <div class="encabezado">
         <h1>Bienvenido</h1>
@@ -7,20 +6,25 @@
 
     <form (ngSubmit)="onLogin()" #loginForm="ngForm">
         <div class="mb-3">
-            <label for="email" class="form-label">Correo Electrónico</label>
-            <input type="email" class="form-control" id="email" name="email" required ngModel />
+            <label for="username" class="form-label">Usuario</label>
+            <input type="text" class="form-control" id="username" name="username" required [(ngModel)]="username" />
         </div>
+
         <div class="mb-3">
             <label for="password" class="form-label">Contraseña</label>
-            <input type="password" class="form-control" id="password" name="password" required ngModel />
+            <input type="password" class="form-control" id="password" name="password" required [(ngModel)]="password" />
         </div>
 
         <button class="btn btn-primary" type="submit" [disabled]="loading">
             {{ loading ? 'Cargando...' : 'Enviar' }}
         </button>
+
+        <div *ngIf="error" class="alert alert-danger mt-3">
+            {{ error }}
+        </div>
     </form>
 </div>
 
 <div class="text-center mt-3">
-    <img src="assets/imagenes/prueba2.webp" alt="Prueba" height="42%" width="42%" />
-</div>
+    <img src="assets/imagenes/prueba2.webp" alt="Prueba" style="max-width: 42%; height: auto;" />
+</div>  
